sprint-3: implemented communityEmail service test case.